[package]
name = "olin-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = ">=0.11.10"
futures = ">=0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] }
soup = "0.5.1"
rand = ">=0.8.5"
markup5ever_rcdom = "*"