[package]
name = "olin-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = ">=0.11.10", features = ["json"]}
futures = ">=0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] }
select = ">=0.5.0"
rand = ">=0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"